[gd_scene load_steps=4 format=3 uid="uid://d1x2y3z4k5l6m"]

[ext_resource type="Script" path="res://scripts/dialogue_choices.gd" id="1_choices_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_choice_bg"]
bg_color = Color(0.2, 0.2, 0.2, 0.9)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_choice_hover"]
bg_color = Color(0.3, 0.3, 0.3, 0.9)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_input_bg"]
bg_color = Color(0.15, 0.15, 0.15, 0.9)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_send_button"]
bg_color = Color(0.2, 0.5, 0.8, 0.9)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="DialogueChoices" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1_choices_script")

[node name="ChoicesContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -160.0
offset_right = -20.0
offset_bottom = 160.0
mouse_filter = 2

[node name="TitleLabel" type="Label" parent="ChoicesContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Choose your response:"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="ChoicesContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="Choice1" type="Button" parent="ChoicesContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_choice_bg")
theme_override_styles/hover = SubResource("StyleBoxFlat_choice_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_choice_hover")
text = "Hello! How are you today?"
autowrap_mode = 2

[node name="Spacer2" type="Control" parent="ChoicesContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 5)

[node name="Choice2" type="Button" parent="ChoicesContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_choice_bg")
theme_override_styles/hover = SubResource("StyleBoxFlat_choice_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_choice_hover")
text = "What do you do here?"
autowrap_mode = 2

[node name="Spacer3" type="Control" parent="ChoicesContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 5)

[node name="Choice3" type="Button" parent="ChoicesContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_choice_bg")
theme_override_styles/hover = SubResource("StyleBoxFlat_choice_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_choice_hover")
text = "Goodbye for now."
autowrap_mode = 2

[node name="Spacer4" type="Control" parent="ChoicesContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 15)

[node name="OrLabel" type="Label" parent="ChoicesContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "Or type your own message:"
horizontal_alignment = 1

[node name="Spacer5" type="Control" parent="ChoicesContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 5)

[node name="TextInputContainer" type="HBoxContainer" parent="ChoicesContainer"]
layout_mode = 2

[node name="TextInput" type="LineEdit" parent="ChoicesContainer/TextInputContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_input_bg")
theme_override_styles/focus = SubResource("StyleBoxFlat_input_bg")
placeholder_text = "Type your message here..."

[node name="SendButton" type="Button" parent="ChoicesContainer/TextInputContainer"]
layout_mode = 2
custom_minimum_size = Vector2(60, 0)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_send_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_choice_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_choice_hover")
text = "Send"
